--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "commander": "2.9.0",
     "fs-promise": "0.3.1",
     "lodash": "3.10.1",
+    "spawn-sync": "1.0.15",
     "when": "3.7.2",
     "winreg": "0.0.12"
   },
